--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="style.css" />
- 
   </head>
   <body>
 
@@ -23,7 +22,6 @@
       <div class="contenedor"></div>
       <button id="stop" class="hide">Salir <i class="fas fa-angle-double-right"></i></button>
     </div>
-
 
     <div class="info-box">
         <div class="info-title">
@@ -58,6 +56,7 @@
     </div>
 </div>
 
+<!--JAVASCRPT-->
 <script src="script.js"></script>
   </body>
 </html>
